--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Banner section -->
   	<div class="banner">
-      <h1>The Coding Castle Community - Where coding comes home</h1>
+      <h1>The Coding Castle Community - Where coding is at home</h1>
       <p>Coding Castle unites and develops the best talent</p>
       <a href="http://youniqueverse.com" target="_blank" class="button-blue">Join Coding Castle</a>
     </div>
@@ -53,7 +53,7 @@
 
     <!-- Coding Castle Footer section -->
     <div class="footer">
-      <p>The Coding Castle Community - Where coding comes home</p>
+      <p>The Coding Castle Community - Where coding is at home</p>
     </div>
 
   <body>
